--- a/3d_news_feed.html
+++ b/3d_news_feed.html
@@ -13,7 +13,18 @@
 
 <body>
   <div id="fb-root"></div>
-  <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
+  <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1144675255549754";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
+
+
+  <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true"></div>
   <div
     class="fb-like"
     data-share="true"
@@ -21,20 +32,4 @@
     data-show-faces="true">
   </div>
 </body>
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '1144675255549754',
-      xfbml      : true,
-      version    : 'v2.3'
-    });
-  };
-  (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1144675255549754";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-</script>
 </html>
