--- a/3d_news_feed.html
+++ b/3d_news_feed.html
@@ -48,7 +48,7 @@
 
     window.fbAsyncInit = function() {
     FB.init({
-      appId      : '{your-app-id}',
+      appId      : '1144675255549754',
       cookie     : true,  // enable cookies to allow the server to access 
                           // the session
       xfbml      : true,  // parse social plugins on this page
