--- a/3d_news_feed.html
+++ b/3d_news_feed.html
@@ -15,13 +15,25 @@
   <div id="fb-root"></div>
   <script>
     window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '1144675255549754',
-      cookie     : true,  // enable cookies to allow the server to access 
-                          // the session
-      xfbml      : true,  // parse social plugins on this page
-      version    : 'v2.2' // use version 2.2
-    });
+      FB.init({
+        appId      : '1144675255549754',
+        cookie     : true,  // enable cookies to allow the server to access 
+                            // the session
+        xfbml      : true,  // parse social plugins on this page
+        version    : 'v2.2' // use version 2.2
+      });
+
+      testAPI();
+    };
+
+    // Load the SDK asynchronously
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
 
     function testAPI() {
       console.log('Welcome!  Fetching your information.... ');
